force-app/main/default/objects/Dummy23__c/Dummy23__c.object-meta.xml
<CustomObject>
    <label>Dummy23</label>
    <nameField>
        <label>Dummy23 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy23</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>