force-app/main/default/objects/Dummy23__c/fields/FooBar029__c.field-meta.xml
<CustomField>
    <fullName>FooBar029__c</fullName>
    <label>FooBar029</label>
    <length>255</length>
    <type>Text</type>
</CustomField>