force-app/main/default/objects/Dummy23__c/fields/FooBar090__c.field-meta.xml
<CustomField>
    <fullName>FooBar090__c</fullName>
    <label>FooBar090</label>
    <length>255</length>
    <type>Text</type>
</CustomField>