force-app/main/default/objects/Dummy23__c/fields/FooBar134__c.field-meta.xml
<CustomField>
    <fullName>FooBar134__c</fullName>
    <label>FooBar134</label>
    <length>255</length>
    <type>Text</type>
</CustomField>